test/compile_errors/stage1/obj/if_condition_is_bool_not_int.zig
export fn f() void {
    if (0) {}
}

// if condition is bool, not int
//
// tmp.zig:2:9: error: expected type 'bool', found 'comptime_int'
